tests/rt/pos/core/toString05.trp
fwrite (stdout authority, toString [42])
