tests/rt/neg/core/fwrite.trp
fwrite (stdout authority) 42